--- a/face_mask_detection.ipynb
+++ b/face_mask_detection.ipynb
@@ -946,6 +946,202 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>loss</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>precision</th>\n",
+       "      <th>recall</th>\n",
+       "      <th>auc</th>\n",
+       "      <th>val_loss</th>\n",
+       "      <th>val_accuracy</th>\n",
+       "      <th>val_precision</th>\n",
+       "      <th>val_recall</th>\n",
+       "      <th>val_auc</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.094180</td>\n",
+       "      <td>0.984852</td>\n",
+       "      <td>0.984852</td>\n",
+       "      <td>0.984852</td>\n",
+       "      <td>0.995408</td>\n",
+       "      <td>0.001069</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.999998</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>0.024827</td>\n",
+       "      <td>0.994783</td>\n",
+       "      <td>0.994783</td>\n",
+       "      <td>0.994783</td>\n",
+       "      <td>0.998427</td>\n",
+       "      <td>0.008028</td>\n",
+       "      <td>0.99625</td>\n",
+       "      <td>0.99625</td>\n",
+       "      <td>0.99625</td>\n",
+       "      <td>0.999967</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>0.015957</td>\n",
+       "      <td>0.995486</td>\n",
+       "      <td>0.995486</td>\n",
+       "      <td>0.995486</td>\n",
+       "      <td>0.999202</td>\n",
+       "      <td>0.002543</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.99875</td>\n",
+       "      <td>0.999999</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>0.025634</td>\n",
+       "      <td>0.994683</td>\n",
+       "      <td>0.994683</td>\n",
+       "      <td>0.994683</td>\n",
+       "      <td>0.998431</td>\n",
+       "      <td>0.000837</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.00000</td>\n",
+       "      <td>1.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0.017774</td>\n",
+       "      <td>0.996087</td>\n",
+       "      <td>0.996087</td>\n",
+       "      <td>0.996087</td>\n",
+       "      <td>0.998809</td>\n",
+       "      <td>0.003736</td>\n",
+       "      <td>0.99750</td>\n",
+       "      <td>0.99750</td>\n",
+       "      <td>0.99750</td>\n",
+       "      <td>0.999994</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       loss  accuracy  precision    recall       auc  val_loss  val_accuracy  \\\n",
+       "0  0.094180  0.984852   0.984852  0.984852  0.995408  0.001069       0.99875   \n",
+       "1  0.024827  0.994783   0.994783  0.994783  0.998427  0.008028       0.99625   \n",
+       "2  0.015957  0.995486   0.995486  0.995486  0.999202  0.002543       0.99875   \n",
+       "3  0.025634  0.994683   0.994683  0.994683  0.998431  0.000837       1.00000   \n",
+       "4  0.017774  0.996087   0.996087  0.996087  0.998809  0.003736       0.99750   \n",
+       "\n",
+       "   val_precision  val_recall   val_auc  \n",
+       "0        0.99875     0.99875  0.999998  \n",
+       "1        0.99625     0.99625  0.999967  \n",
+       "2        0.99875     0.99875  0.999999  \n",
+       "3        1.00000     1.00000  1.000000  \n",
+       "4        0.99750     0.99750  0.999994  "
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd \n",
+    "df=pd.read_csv(\"face-mask.csv\")\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "df = pd.read_csv(\"face-mask.csv\")\n",
+    "\n",
+    "# Plot and save Training and Validation Loss\n",
+    "plt.plot(df['loss'], label='Training Loss')\n",
+    "plt.plot(df['val_loss'], label='Validation Loss')\n",
+    "plt.title('Training and Validation Loss')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Loss')\n",
+    "plt.legend()\n",
+    "plt.savefig('loss_plot.png')\n",
+    "plt.close()\n",
+    "\n",
+    "# Plot and save Training and Validation Accuracy\n",
+    "plt.plot(df['accuracy'], label='Training Accuracy')\n",
+    "plt.plot(df['val_accuracy'], label='Validation Accuracy')\n",
+    "plt.title('Training and Validation Accuracy')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Accuracy')\n",
+    "plt.legend()\n",
+    "plt.savefig('accuracy_plot.png')\n",
+    "plt.close()\n",
+    "\n",
+    "# Plot and save Training and Validation Precision\n",
+    "plt.plot(df['precision'], label='Training Precision')\n",
+    "plt.plot(df['val_precision'], label='Validation Precision')\n",
+    "plt.title('Training and Validation Precision')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Precision')\n",
+    "plt.legend()\n",
+    "plt.savefig('precision_plot.png')\n",
+    "plt.close()\n",
+    "\n",
+    "# Plot and save Training and Validation Recall\n",
+    "plt.plot(df['recall'], label='Training Recall')\n",
+    "plt.plot(df['val_recall'], label='Validation Recall')\n",
+    "plt.title('Training and Validation Recall')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Recall')\n",
+    "plt.legend()\n",
+    "plt.savefig('recall_plot.png')\n",
+    "plt.close()\n",
+    "\n",
+    "# Plot and save Training and Validation Recall\n",
+    "plt.plot(df['auc'], label='Training Recall')\n",
+    "plt.plot(df['val_auc'], label='Validation Recall')\n",
+    "plt.title('Training and Validation Recall')\n",
+    "plt.xlabel('Epoch')\n",
+    "plt.ylabel('Recall')\n",
+    "plt.legend()\n",
+    "plt.savefig('auc_plot.png')\n",
+    "plt.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -968,7 +1164,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.11.0"
   }
  },
  "nbformat": 4,
